test/domains/compilerErrors/notsupportedOpCount-int.chpl

var D = {1..2, 1..3};
writeln(D#1);
