test/domains/compilerErrors/notsupportedOpCount-int.good
notsupportedOpCount-int.chpl:3: error: cannot apply '#' with an integer to multi-dimensional domains and arrays
